--- a/burguer-queen/src/App.css
+++ b/burguer-queen/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.homeContainer{
+display: flex;
+flex-direction: column wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.productsContainer {
+margin: 80px;
+margin-left: 20px;
+height: 550px;
+width: 600px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cardContainer{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  height: 510px;
+  width: 300px;
+  margin: 5px;
+  margin-right: 100px;
+  margin-left: 10px;
+  margin-bottom: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+.productCard{
+  height: 100px;
+  width: 90px;
+  margin-left: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cartContainer{
+  margin-right: 0px;
+  margin-top: 80px;
+  height: 800px;
+  width: 400px;
+}
+
+.navbarContainer{
+  display: flex;
+  flex-direction: row;
+  margin-top: 0px;
+  height: 65px;
 }
