--- a/burguer-queen/src/App.css
+++ b/burguer-queen/src/App.css
@@ -1,40 +1,150 @@
+
 .homeContainer{
-display: flex;
-flex-direction: column wrap;
+  background-image:url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
+  display: flex;
+  flex-direction: column wrap;
+}
+
+.productsContainer h1{
+  color: #FFFFFF;
 }
 
 .productsContainer {
-margin: 80px;
-margin-left: 20px;
-height: 550px;
-width: 600px;
+  /*background-color: blue;*/
+  margin: 90px;
+  margin-left: 20px;
+  height: 500px;
+  width: 500px;
 }
 
 .cardContainer{
+  /*background-color:chartreuse;*/
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  height: 510px;
-  width: 300px;
-  margin: 5px;
+  height: 410px;
+  width: 500px;
+  margin: 15px;
   margin-right: 100px;
-  margin-left: 10px;
+  margin-left: 0px;
   margin-bottom: 150px;
 }
 
 .productCard{
-  height: 100px;
-  width: 90px;
-  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  background-image: none;
+  background-color: #F72585;
+  opacity: 0.7;
+  border-color: #F72585;
+  border-radius: 15px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  height: 130px;
+  width: 100px;
+  margin-top: 15px;
+  margin-left: 0px;
+  margin-right: 20px;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 12px;
+  color:  #FFFFFF;
+}
+
+.infoProduct{
+  margin-top: 15px;
+  margin-bottom: 5px;
+  height: 80px;
+}
+
+.productName{
+margin-top: 5px;
+}
+
+.productPrice{
+  margin-top: 10px;
+}
+
+.btnAddCart{
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+.btnAdd{
+  background-color: #847FDC;
+  border-color: #3F37C9;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  color: #FFFFFF;
+  font-size: 12px;
+  height: 24px;
+  width: 80px;
+}
+
+.cartContainer h2{
+color: #FFFFFF;
 }
 
 .cartContainer{
-  margin-right: 0px;
+  background-color: #000000;
+  opacity: 0.6;
+  margin-right: 55px;
   margin-top: 80px;
   height: 800px;
   width: 400px;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 20px;
+  color:  #FFFFFF;
 }
 
+.cartSummary{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 18px;
+  color:  #FFFFFF;
+}
+
+.cartSummaryHeading{
+  margin-bottom: 10px;
+}
+.cartSummaryQty{
+  margin-bottom: 15px;
+}
+.sendKitchen{
+  background-color: #847FDC;
+  border-color: #3F37C9;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  color: #FFFFFF;
+  font-size: 16px;
+  height: 38px;
+  width: 140px;
+}
+
+.cartCard{
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cartName{
+  background-color: chartreuse;
+  height: 24px;
+}
+
+.cartPriceOriginal{
+  background-color: chartreuse;
+  height: 24px;
+}
+
+.incAndDec{
+  display: flex;
+  flex-direction: row;
+}
 .navbarContainer{
   display: flex;
   flex-direction: row;
