--- a/burguer-queen/src/App.css
+++ b/burguer-queen/src/App.css
@@ -1,6 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap');
+*{
 
-.homeContainer{
+  font-family: 'Roboto', sans-serif;
+}
+.backgroundContainer {
   background-image:url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
+  width: 80;
+  height: 50%;
+  background-size: cover;
+  position: relative;
+  opacity: none;
+}
+.homeContainer{
   display: flex;
   flex-direction: column wrap;
 }
@@ -11,8 +22,8 @@
 
 .productsContainer {
   /*background-color: blue;*/
-  margin: 90px;
-  margin-left: 20px;
+  margin: 150px;
+  margin-left: 60px;
   height: 500px;
   width: 500px;
 }
@@ -22,7 +33,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  height: 410px;
+  height: 300px;
   width: 500px;
   margin: 15px;
   margin-right: 100px;
@@ -46,7 +57,8 @@
   margin-top: 15px;
   margin-left: 0px;
   margin-right: 20px;
-  font-family: 'Oxygen', sans-serif;
+  margin-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
   font-size: 12px;
   color:  #FFFFFF;
 }
@@ -81,18 +93,45 @@ margin-top: 5px;
   width: 80px;
 }
 
-.cartContainer h2{
-color: #FFFFFF;
-}
-
 .cartContainer{
-  background-color: #000000;
-  opacity: 0.6;
-  margin-right: 55px;
-  margin-top: 80px;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  margin-right:370px;
+  margin-left:-120px;
+  margin-top: 20px;
   height: 800px;
   width: 400px;
-  font-family: 'Oxygen', sans-serif;
+}
+
+.logoContainer{
+display: flex;
+  /*flex-direction: row-reverse;*/
+  justify-content:center ;
+}
+.logoBurgerQueen{
+  /* margin: 0px;
+  margin-right: 0px; */
+  height: 110px;
+  width: auto;
+
+
+}
+
+.orderContainer h2{
+  color: #FFFFFF;
+  margin-left: 15px;
+}
+
+.orderContainer{
+  background-color: #000000;
+  opacity: 0.6;
+  margin-right:0px;
+  margin-left: 0px;
+  margin-top: 15px;
+  height: 800px;
+  width: 400px;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   color:  #FFFFFF;
 }
@@ -102,7 +141,7 @@ color: #FFFFFF;
   flex-direction: column;
   text-align: center;
   align-items: center;
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   color:  #FFFFFF;
 }
@@ -110,9 +149,11 @@ color: #FFFFFF;
 .cartSummaryHeading{
   margin-bottom: 10px;
 }
+
 .cartSummaryQty{
   margin-bottom: 15px;
 }
+
 .sendKitchen{
   background-color: #847FDC;
   border-color: #3F37C9;
@@ -125,14 +166,13 @@ color: #FFFFFF;
 }
 
 .cartCard{
-  background-color: blueviolet;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .cartName{
-  background-color: chartreuse;
   height: 24px;
 }
 
@@ -144,10 +184,21 @@ color: #FFFFFF;
 .incAndDec{
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  width: 100px;
+  margin: 5px;
+  margin-bottom: 5px;
 }
+
+.inc, .dec, .deleteBtn{
+  height: 20px;
+  width: 20px;
+}
+
 .navbarContainer{
   display: flex;
   flex-direction: row;
   margin-top: 0px;
   height: 65px;
 }
+
